# engram

./: .gitignore  AGENTS.md  HANDOVER.md  README.md  classifier.py  context_broker.py  debug_llm.py  engram_nitin_bridge.py  extractor.py  install.ps1  install.sh  llm_extractor.py  memory.py  requirements.txt  server.py  tasks.py  utils.py
engram_nitin/: __init__.py  cli.py  config.py  mcp_server.py  pyproject.toml  server.py
engram_nitin/backends/: __init__.py  base.py  faiss_backend.py  qdrant_backend.py
engram_nitin/ingestion/: __init__.py  parser.py
engram_nitin/retrieval/: __init__.py  embedder.py  pipeline.py  reranker.py  sparse.py
